feat(mcp): introduce new MCP server components and configuration
- Add core MCP service implementation for handling requests.
- Implement MCP protocol controller for JSON-RPC 2.0 communication.
- Define new data models for MCP requests and responses.
- Configure application properties for MCP server settings.
- Enhance existing services with new migration plan capabilities.